--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "vite build"
+    "build": "vite build",
+    "test": "vitest"
   },
+  "files": [
+    "dist/**"
+  ],
   "description": "A permissive parser for .midi files & .chart files from Clone Hero and Guitar Hero games.",
   "keywords": [
     "guitarhero",
@@ -25,6 +29,7 @@
   "devDependencies": {
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
-    "vite-plugin-dts": "^3.6.3"
+    "vite-plugin-dts": "^3.6.3",
+    "vitest": "^1.0.2"
   }
 }
