--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "test": "vitest"
+    "test": "vitest",
+    "prepare": "pnpm test"
   },
   "files": [
     "dist/**"
